# mini_mesh_parser

./: .gitignore  Cargo.toml  README.md
assets/: bunny.off  cube1.ply
benches/: bench.rs
parser/: parser.vtuneproj
parser/r000ps/: r000ps.vtune
parser/r000ps/config/: collection.cfg  context_values.cfg  log.cfg  runsa.options
parser/r000ps/data.0/: 207975.stat.perf  map.events  perfcmd  sep.events  systemcollector-207952-hirondelle.sc
parser/r000ps/sqlite-db/_cache_grouper_data4_dd_thread/: container.metadata
parser/r000ps/sqlite-db/_cache_grouper_data4_dd_thread/grouper/: 0
parser/r000ps/sqlite-db/_cache_grouper_data4_global_data_grouper/grouper/: 0
parser/r000ps/sqlite-db/_cache_grouper_data4_global_time_interval_metrics/grouper/: 0
parser/r000ps/sqlite-db/pmu_data/: container.metadata
parser/r000ps/sqlite-db/pmu_data/end_tsc/: 0  mapping.xml
parser/r000ps/sqlite-db/timelinedb/: directory.xml
parser/r001hs/: r001hs.vtune
parser/r001hs/config/: context_values.cfg  log.cfg  runsa.options  state.cfg
parser/r001hs/data.0/: map.events  perfcmd  sep.events  systemcollector-210578-hirondelle.sc
parser/r001hs/data.0/210656.perf/: data  data.0  data.1  data.10  data.11  data.15  data.2  data.3  data.4  data.5  data.6  data.8  data.9
parser/r001hs/sqlite-db/_cache_grouper_data4_dd_thread/: container.metadata
parser/r001hs/sqlite-db/_cache_grouper_data4_dd_thread/grouper/: 0
parser/r001hs/sqlite-db/pmu_data/: container.metadata
parser/r001hs/sqlite-db/timelinedb/: directory.xml
src/: lib.rs  main.rs  obj.rs  off.rs  ply.rs  stl.rs
(+11 files in other folders)
